--- a/MagivVilla_web/Views/VillaNumber/IndexVillaNumber.cshtml
+++ b/MagivVilla_web/Views/VillaNumber/IndexVillaNumber.cshtml
@@ -7,7 +7,7 @@
         </div>
 
         <div class="col text-end pt-1">
-            <a asp-controller="VillaNumber" asp-action="CreateNumberVilla" class="btn btn-outline-primary"><i class="bi bi-plus-square-fill"></i> Create New VillaNumber </a>
+            <a asp-controller="VillaNumber" asp-action="CreateVillaNumber" class="btn btn-outline-primary"><i class="bi bi-plus-square-fill"></i> Create New VillaNumber </a>
 
         </div>
 
